# transcriptase

./: LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: tauri.yml
src/: AppState.tsx  Credits.tsx  DragNDrop.tsx  Error.tsx  ModelSelection.tsx  Success.tsx  Transcribe.tsx  main.tsx  pico.min.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg_decoder.rs  main.rs  model.rs  progress.rs  transcript.rs  utils.rs  whisper.rs
