[package]
name = "transcriptase"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.28"
num = "0.4.0"
reqwest = "0.11.18"
anyhow = "1.0.71"
whisper-rs = { version = "0.8.0", path = "../../../whisper-rs" }
whisper-rs-sys = { path = "../../../whisper-rs/sys" }
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
uuid = "1.4.0"
audrey = "0.3.0"
enum-iterator = "1.4.1"
once_cell = "1.18.0"
byte-unit = "4.0.19"
open = "5.0.0"

[target.aarch64-apple-darwin]
rustflags = "-lc++ -l framework=Accelerate"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
